Updated surefire plugin version